--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_HOST=cluster0-jehhi.mongodb.net
-MONGO_USER=scraper-test
-MONGO_PASS=gAAAAABdnD9WvsM1USNLM1ockU89dDQ6jkhUZvdd1_cAfOsMH83f5-f1NuBVFfey_GAxou0Inu6DjLInE7Qb-eySuw1rm718UQ==
-MONGO_DATABASE=news-feed
-MONGO_COLLECTIONS=articles
+MONGO_HOST=<should-be-passed-from-cicd-pipeline>
+MONGO_USER=<should-be-passed-from-cicd-pipeline>
+MONGO_PASS=<should-be-passed-from-cicd-pipeline>
+MONGO_DATABASE=<should-be-passed-from-cicd-pipeline>
+MONGO_COLLECTIONS=<should-be-passed-from-cicd-pipeline>
 
